--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ install:
   - pip install decorator --upgrade
   - pip install enum34 --upgrade
   - pip install lz4 --upgrade
-  - pip install mock==1.0.1
+  - pip install mock --upgrade
   - pip install mockextras
   - pip install pytest --upgrade
   - pip install pytest-cov --upgrade
