--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ install:
   - pip install lz4 --upgrade
   - pip install mock --upgrade
   - pip install mockextras
+  - pip install pytest==2.9.2
   - pip install pytest-cov --upgrade
   - pip install pytest-dbfixtures --upgrade
   - pip install pytest-timeout --upgrade
