--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ install:
   - pip install mock --upgrade
   - pip install mockextras
   - pip install pytest==2.9.2
-  - pip install pytest-cov --upgrade
+  - pip install pytest-cov==2.3.0
   - pip install pytest-dbfixtures --upgrade
   - pip install pytest-timeout --upgrade
   - pip install pytest-xdist --upgrade
