--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,8 @@ install:
   - pip install pytest==2.9.2
   - pip install pytest-cov==2.3.0
   - pip install pytest-dbfixtures==0.15.0
-  - pip install pytest-timeout
-  - pip install pytest-xdist
+  - pip install pytest-timeout==1.0.0
+  - pip install pytest-xdist==1.15.0
   - pip install setuptools-git --upgrade
 script:
   - pip freeze
