--- a/.travis.yml
+++ b/.travis.yml
@@ -18,11 +18,11 @@ install:
   - pip install lz4 --upgrade
   - pip install mock --upgrade
   - pip install mockextras
-  - pip install pytest --upgrade
-  - pip install pytest-cov --upgrade
-  - pip install pytest-dbfixtures --upgrade
-  - pip install pytest-timeout --upgrade
-  - pip install pytest-xdist --upgrade
+  - pip install pytest==2.9.2
+  - pip install pytest-cov==2.3.0
+  - pip install pytest-dbfixtures==0.15.0
+  - pip install pytest-timeout==1.0.0
+  - pip install pytest-xdist==1.15.0
   - pip install setuptools-git --upgrade
 script:
   - pip freeze
