--- a/.travis.yml
+++ b/.travis.yml
@@ -26,4 +26,4 @@ install:
   - pip install setuptools-git --upgrade
 script:
   - pip freeze
-  - python setup.py test
+  - python setup.py test --pytest-args=-v
