--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ addons:
       - mongodb-3.2-precise
     packages:
       - mongodb-org-server
+      - mongodb-org-shell
 services:
    - mongodb
 
