--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ install:
   - pip install python-dateutil --upgrade
   - pip install pytz --upgrade
   - pip install tzlocal --upgrade
-  - pip install pymongo==3.4.0
+  - pip install pymongo --upgrade
   - pip install numpy --upgrade
   - pip install pandas --upgrade
   - pip install decorator --upgrade
