--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,63 +27,36 @@ jobs:
     # To see the list of pre-built images that CircleCI provides for most common languages see
     # https://circleci.com/docs/2.0/circleci-images/
     docker:
-    - image: circleci/build-image:ubuntu-14.04-XXL-upstart-1189-5614f37
-      command: /sbin/init
+    - image: circleci/python:3-stretch
     steps:
-    # Machine Setup
-    #   If you break your build into multiple jobs with workflows, you will probably want to do the parts of this that are relevant in each
-    # The following `checkout` command checks out your code to your working directory. In 1.0 we did this implicitly. In 2.0 you can choose where in the course of a job your code should be checked out.
+
     - checkout
     # Prepare for artifact and test results  collection equivalent to how it was done on 1.0.
     # In many cases you can simplify this from what is generated here.
     # 'See docs on artifact collection here https://circleci.com/docs/2.0/artifacts/'
-    - run: mkdir -p $CIRCLE_ARTIFACTS $CIRCLE_TEST_REPORTS
-    # Dependencies
-    #   This would typically go in either a build or a build-and-test job when using workflows
-    # Restore the dependency cache
-    - restore_cache:
-        keys:
-        # This branch if available
-        - v1-dep-{{ .Branch }}-
-        # Default branch if not
-        - v1-dep-master-
-        # Any branch if there are none on the default branch - this should be unnecessary if you have your default branch configured correctly
-        - v1-dep-
-    # This is based on your 1.0 configuration file or project settings
-    - run: |-
-        # bdist_egg on this takes multiple GB
-        pip install cython
-        pip install numpy==1.9.2
-        pip install pandas==0.16.2
-        pip install pymongo
-        pip install lz4
-        pip install pytest-xdist
-        pip install coverage
-        pip install python-coveralls
-        pip install mock==1.0.1
-        pip install pytest-server-fixtures==1.2.3
-        pip install pytest-shutil==1.2.2
-    # This is based on your 1.0 configuration file or project settings
-    - run: |-
-        # Dump the venv for when the tests randomly fail...
-        python --version
-        pip freeze
-        # Remove the venv directory so py.test doesn't pick up other random tests
-        rm venv
-    # Save dependency cache
-    - save_cache:
-        key: v1-dep-{{ .Branch }}-{{ epoch }}
+#    - run: mkdir -p $CIRCLE_ARTIFACTS $CIRCLE_TEST_REPORTS
+ 
+   # Restore the dependency cache
+      # https://circleci.com/docs/2.0/language-python/
+    - restore_cache: # restores saved dependency cache if the Branch key template or requirements.txt files have not changed since the previous run
+        key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
+    - run: # install and activate virtual environment with pip
+        command: |
+          python3 -m venv venv
+          . venv/bin/activate
+          pip install -r requirements.txt
+    - save_cache: # special step to save dependency cache
+        key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
         paths:
-        # This is a broad list of cache paths to include many possible development environments
-        # You can probably delete some of these entries
-        - vendor/bundle
-        - ~/virtualenvs
-        - ~/.m2
-        - ~/.ivy2
-        - ~/.bundle
-        - ~/.go_workspace
-        - ~/.gradle
-        - ~/.cache/bower
+          - "venv"
+    - run: # run tests
+        command: |
+          . venv/bin/activate
+          python setup.py test
+    - store_artifacts: # special step to store test reports as artifacts
+        path: test-reports/
+        destination: tr1
+ 
     # Test
     #   This would typically be a build job when using workflows, possibly combined with build
     # The following line was run implicitly in your 1.0 builds based on what CircleCI inferred about the structure of your project. In 2.0 you need to be explicit about which commands should be run. In some cases you can discard inferred commands if they are not relevant to your project.
