--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,36 +1,18 @@
-# This configuration was automatically generated from a CircleCI 1.0 config.
-# It should include any build commands you had along with commands that CircleCI
-# inferred from your project structure. We strongly recommend you read all the
-# comments in this file to understand the structure of CircleCI 2.0, as the idiom
-# for configuration has changed substantially in 2.0 to allow arbitrary jobs rather
-# than the prescribed lifecycle of 1.0. In general, we recommend using this generated
-# configuration as a reference rather than using it in production, though in most
-# cases it should duplicate the execution of your original 1.0 config.
 version: 2
 jobs:
   build:
     working_directory: ~/manahl/arctic
     parallelism: 1
     shell: /bin/bash --login
-    # CircleCI 2.0 does not support environment variables that refer to each other the same way as 1.0 did.
-    # If any of these refer to each other, rewrite them so that they don't or see https://circleci.com/docs/2.0/env-vars/#interpolating-environment-variables-to-set-other-environment-variables .
+
     environment:
       CIRCLE_ARTIFACTS: /tmp/circleci-artifacts
       CIRCLE_TEST_REPORTS: /tmp/circleci-test-results
-    # In CircleCI 1.0 we used a pre-configured image with a large number of languages and other packages.
-    # In CircleCI 2.0 you can now specify your own image, or use one of our pre-configured images.
-    # The following configuration line tells CircleCI to use the specified docker image as the runtime environment for you job.
-    # We have selected a pre-built image that mirrors the build environment we use on
-    # the 1.0 platform, but we recommend you choose an image more tailored to the needs
-    # of each job. For more information on choosing an image (or alternatively using a
-    # VM instead of a container) see https://circleci.com/docs/2.0/executor-types/
-    # To see the list of pre-built images that CircleCI provides for most common languages see
-    # https://circleci.com/docs/2.0/circleci-images/
+
     docker:
-    # no libssl in python:3 required by mongod
-#    - image: circleci/python:3-stretch
-    - image: circleci/build-image:ubuntu-14.04-XXL-upstart-1189-5614f37
-      command: /sbin/init
+#    - image: circleci/build-image:ubuntu-14.04-XXL-upstart-1189-5614f37
+#      command: /sbin/init
+    - image: circleci/python:3-stretch
     
     steps:
 
@@ -44,13 +26,16 @@ jobs:
       # https://circleci.com/docs/2.0/language-python/
     - restore_cache: # restores saved dependency cache if the Branch key template or requirements.txt files have not changed since the previous run
         key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
-# Python image doens't obviously have libssl - not sure how to get it
-#    - run:
-#        name: Install Mongo
-#        command: |
-#          wget https://fastdl.mongodb.org/linux/mongodb-linux-x86_64-debian81-v3.4-latest.tgz
-#          tar -zxvf mongodb-linux-x86_64-debian81-v3.4-latest.tgz
-#          sudo mv mongodb-*/bin/* /usr/local/bin/
+
+    - run:
+        name: Install Mongo
+        command: |
+          # MongoDB requiring SSL
+          # wget https://fastdl.mongodb.org/linux/mongodb-linux-x86_64-debian81-v3.4-latest.tgz
+          # Legacy MongoDB without SSL
+          wget http://fastdl.mongodb.org/linux/mongodb-linux-x86_64-v3.4-latest.tgz
+          tar -zxvf mongodb-linux-x86_64-*-latest.tgz
+          sudo mv mongodb-*/bin/* /usr/local/bin/
     - run: 
         name: Install arctic requirements
         command: |
