--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,8 @@ jobs:
     - run: 
         name: Install arctic requirements
         command: |
-          python -m venv venv
+          mkdir -p ./venv
+          virtualenv ./venv
           . venv/bin/activate
           pip install -r requirements.txt
     - save_cache: # special step to save dependency cache
