--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,8 @@ install:
   - pip install pytest-timeout --upgrade
   - pip install pytest-xdist --upgrade
   - pip install setuptools-git --upgrade
+  - pip install boto3 --upgrade
+  - pip install moto --upgrade
 script:
   - pip freeze
   - python setup.py test --pytest-args=-v
