--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
-dist: trusty
+dist: xenial
 sudo: false
 language: python
 python:
   - "2.7"
   - "3.6"
+  - "3.7"
 
 services:
    - mongodb
@@ -30,6 +31,7 @@ install:
   - pip install pytest-timeout --upgrade
   - pip install pytest-xdist --upgrade
   - pip install setuptools-git --upgrade
+  - if [[ $TRAVIS_PYTHON_VERSION == 2.7 ]]; then pip install pandas==0.22.0; fi
 script:
   - pip freeze
   - python setup.py test --pytest-args=-v
