--- a/docs/tox/tox.ini
+++ b/docs/tox/tox.ini
@@ -14,18 +14,22 @@
 #    (.venv) $ tox -e tests_style27
 #    (.venv) $ tox -e tests_style36
 #    (.venv) $ tox -e tests_style37
+# Optional tox Runs - still in develoment:
+#    (.venv) $ tox -e benchmark27
+#    (.venv) $ tox -e benchmark36
+#    (.venv) $ tox -e benchmark37
 # Warning: setup.py test is deprecated and will be removed in a future version.
 #    It would be better to port testing to tox and remove it from the setup.py.
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 [tox]
 envlist = dev{27,36,37}
+skipsdist = True
 skip_missing_interpreters = True
 
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # configuration prescribed by `docs/contributing.md` and `.travis.yml`
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 [testenv]
-skipsdist = True
 basepython =
     dev27: python2.7
     dev36: python3.6
@@ -33,12 +37,14 @@ basepython =
     tests_style27: python2.7
     tests_style36: python3.6
     tests_style37: python3.7
+    benchmark27: python2.7
+    benchmark36: python3.6
+    benchmark37: python3.7
 setenv =
     PIP_DISABLE_PIP_VERSION_CHECK = 1
     PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
 passenv = *
-
 deps =
     pycodestyle
     pip
@@ -59,7 +65,6 @@ deps =
     pytest-timeout
     pytest-xdist<=1.26
     setuptools-git
-
 commands =
     pip install --upgrade pip
     pip install python-dateutil --upgrade
@@ -78,26 +83,24 @@ commands =
     pip install pytest-server-fixtures --upgrade
     pip install pytest-timeout --upgrade
     pip install setuptools-git --upgrade
-    pip freeze
     python setup.py develop
     python -m pip list --format=columns
     python -c "print(r'{envpython}')"
+    pip freeze
 
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # (.venv) $ tox -e dev27
 # -----------------------------------------------------------------------------
 [testenv:dev27]
-deps =
-    {[testenv]deps}
+deps = {[testenv]deps}
 usedevelop = True
 commands =
     python -c 'print((80*"~")+"\ntestenv:dev-{basepython}\n"+(80*"~"))'
-    python -c "print(r'{envpython}')"
     pip install pandas==0.22.0
     python setup.py test --pytest-args=-v
     pycodestyle arctic
     python -m pip list --format=columns
-    python -c 'print((80*"~")+"\requirements-dev-{basepython}\n"+(80*"~"))'
+    python -c "print(r'{envpython}')"
     pip freeze
 
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -110,11 +113,10 @@ deps = {[testenv]deps}
 usedevelop = True
 commands =
     python -c 'print((80*"~")+"\ntestenv:dev-{basepython}\n"+(80*"~"))'
-    python -c "print(r'{envpython}')"
     python setup.py test --pytest-args=-v
     pycodestyle arctic
     python -m pip list --format=columns
-    python -c 'print((80*"~")+"\requirements-dev-{basepython}\n"+(80*"~"))'
+    python -c "print(r'{envpython}')"
     pip freeze
 
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -125,9 +127,31 @@ commands =
 # -----------------------------------------------------------------------------
 [testenv:tests_style{27,36,37}]
 deps = {[testenv]deps}
-usedevelop = True
 commands =
     python -c 'print((80*"~")+"\ntestenv:tests_style-{basepython}\n"+(80*"~"))'
     pycodestyle tests
+
+# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+# (.venv) $ tox -e benchmark27
+# (.venv) $ tox -e benchmark36
+# or
+# (.venv) $ tox -e benchmark37
+#
+# > Note: asv can be downloaded as a submodule which locates it at ./asv from
+#         this file.  Use the `--recursive` argument when you clone to get it
+# $ git clone --recursive https://github.com/man-group/arctic.git
+# -----------------------------------------------------------------------------
+[testenv:benchmark{27,36,37}]
+changedir = {toxinidir}/asv
+sitepackages = False
+usedevelop = True
+install_command = pip install {opts} {packages}
+deps = -r{toxinidir}/asv/requirements-dev.txt
+commands =
+    python -c 'print((80*"~")+"\ntestenv:benchmark-{basepython}\n"+(80*"~"))'
+    python setup.py develop
+    python -m pip list --format=columns
+    python -c "print(r'{envpython}')"
+    pip freeze
 
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
