--- a/tox.ini
+++ b/tox.ini
@@ -1,28 +1,26 @@
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # NOTE: This file must be located in the same directory as setup.py.
-# Usage: Use tox to create and test multiple Python virtual environments
-#    as defined in setup.py and .travis.yml.  When you run `tox` without
-#    arguments it will create dev27, dev36, and dev37 in the /.tox directory
-#    directory and run both `setup.py test` and `pycodestyle arctic`
+#
+# Usage: Use to create virtual environments as defined in setup.py and .travis.yml.
+#    When you run `tox` without arguments it will create dev27, dev36, dev37,
+#    and bm36 in the /.tox directory (see each for specifics on what is run)
+#
 # Note: Once these virtual environments are run they can be used as the
-#    development environment by setting the IDE python interpreter accordingly.
-# Single tox Runs:
-#    (.venv) $ tox -e dev27     # just run Python 2.7 tests amd pycodestyle
-#    (.venv) $ tox -e dev36     # just run Python 3.6 tests amd pycodestyle
-#    (.venv) $ tox -e dev37     # just run Python 3.7 tests amd pycodestyle
-# Optional tox Runs:
-#    (.venv) $ tox -e tests_style27
-#    (.venv) $ tox -e tests_style36
-#    (.venv) $ tox -e tests_style37
-# Optional tox Runs - still in develoment:
-#    (.venv) $ tox -e benchmark27
-#    (.venv) $ tox -e benchmark36
-#    (.venv) $ tox -e benchmark37
+#    development environment.
+#
+# Single tox Runs:                develop install (of arctic) for each
+#    (.venv) $ tox -e dev27     # Python 2.7 tests amd pycodestyle
+#    (.venv) $ tox -e dev36     # Python 3.6 tests amd pycodestyle
+#    (.venv) $ tox -e dev37     # Python 3.7 tests amd pycodestyle
+#    (.venv) $ tox -e bm36      # Python 2.7, 3.6, and 3.7 asv benchmarks
+#
 # Warning: setup.py test is deprecated and will be removed in a future version.
 #    It would be better to port testing to tox and remove it from the setup.py.
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 [tox]
-envlist = dev{27,36,37}
+envlist =
+    dev{27,36,37}
+    bm36
 skipsdist = True
 skip_missing_interpreters = True
 
@@ -34,12 +32,7 @@ basepython =
     dev27: python2.7
     dev36: python3.6
     dev37: python3.7
-    tests_style27: python2.7
-    tests_style36: python3.6
-    tests_style37: python3.7
-    benchmark27: python2.7
-    benchmark36: python3.6
-    benchmark37: python3.7
+    bm36: python3.6
 setenv =
     PIP_DISABLE_PIP_VERSION_CHECK = 1
     PYTHONPATH={toxinidir}/tests
@@ -66,6 +59,7 @@ deps =
     pytest-xdist<=1.26
     setuptools-git
 commands =
+    python -c 'print((80*"~")+"\ntestenv: pip install\n"+(80*"~"))'
     pip install --upgrade pip
     pip install python-dateutil --upgrade
     pip install pytz --upgrade
@@ -83,10 +77,9 @@ commands =
     pip install pytest-server-fixtures --upgrade
     pip install pytest-timeout --upgrade
     pip install setuptools-git --upgrade
+    python -c 'print((80*"~")+"\ntestenv: setup.py develop (for arctic)\n"+(80*"~"))'
     python setup.py develop
-    python -m pip list --format=columns
-    python -c "print(r'{envpython}')"
-    pip freeze
+    python -c 'print((80*"~")+"\nntestenv: complete\n"+(80*"~"))'
 
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # (.venv) $ tox -e dev27
@@ -95,13 +88,18 @@ commands =
 deps = {[testenv]deps}
 usedevelop = True
 commands =
-    python -c 'print((80*"~")+"\ntestenv:dev-{basepython}\n"+(80*"~"))'
+    python -c 'print((80*"~")+"\ndev27-{basepython}\n"+(80*"~"))'
+    python -c 'print((80*"~")+"\ndev27: pip install pandas=0.22.0\n"+(80*"~"))'
     pip install pandas==0.22.0
+    python -c 'print((80*"~")+"\ndev27: setup.py test (for arctic)\n"+(80*"~"))'
     python setup.py test --pytest-args=-v
+    python -c 'print((80*"~")+"\ndev27: pycodestyle arctic\n"+(80*"~"))'
     pycodestyle arctic
-    python -m pip list --format=columns
-    python -c "print(r'{envpython}')"
-    pip freeze
+    #python -c 'print((80*"~")+"\ndev27: pip list\n"+(80*"~"))'
+    #python -m pip list --format=columns
+    #python -c 'print((80*"~")+"\ndev27: pip freeze\n"+(80*"~"))'
+    #pip freeze
+    python -c 'print((80*"~")+"\ndev27: complete\n"+(80*"~"))'
 
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # (.venv) $ tox -e dev36
@@ -112,46 +110,44 @@ commands =
 deps = {[testenv]deps}
 usedevelop = True
 commands =
-    python -c 'print((80*"~")+"\ntestenv:dev-{basepython}\n"+(80*"~"))'
+    python -c 'print((80*"~")+"\ndev-{basepython}\n"+(80*"~"))'
+    python -c 'print((80*"~")+"\ndev-{basepython}: setup.py test (for arctic)\n"+(80*"~"))'
     python setup.py test --pytest-args=-v
+    python -c 'print((80*"~")+"\ndev-{basepython}: pycodestyle arctic\n"+(80*"~"))'
     pycodestyle arctic
-    python -m pip list --format=columns
-    python -c "print(r'{envpython}')"
-    pip freeze
+    #python -c 'print((80*"~")+"\ndev-{basepython}: list\n"+(80*"~"))'
+    #python -m pip list --format=columns
+    #python -c 'print((80*"~")+"\ndev-{basepython}: pip freeze\n"+(80*"~"))'
+    #pip freeze
+    python -c 'print((80*"~")+"\ndev-{basepython}: complete\n"+(80*"~"))'
 
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-# (.venv) $ tox -e tests_style27
-# (.venv) $ tox -e tests_style36
-# or
-# (.venv) $ tox -e tests_style37
+# (.venv) $ tox -e bm36
+# Note: asv creates multiple env based on asv.conf.json so we only need this
+#       environment from which we can `asv run`
 # -----------------------------------------------------------------------------
-[testenv:tests_style{27,36,37}]
-deps = {[testenv]deps}
-commands =
-    python -c 'print((80*"~")+"\ntestenv:tests_style-{basepython}\n"+(80*"~"))'
-    pycodestyle tests
-
-# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-# (.venv) $ tox -e benchmark27
-# (.venv) $ tox -e benchmark36
-# or
-# (.venv) $ tox -e benchmark37
-#
-# > Note: asv can be downloaded as a submodule which locates it at ./asv from
-#         this file.  Use the `--recursive` argument when you clone to get it
-# $ git clone --recursive https://github.com/man-group/arctic.git
-# -----------------------------------------------------------------------------
-[testenv:benchmark{27,36,37}]
-changedir = {toxinidir}/asv
+[testenv:bm36]
 sitepackages = False
 usedevelop = True
 install_command = pip install {opts} {packages}
-deps = -r{toxinidir}/asv/requirements-dev.txt
+deps =
+    {[testenv]deps}
+    virtualenv
+setenv =
+  PATH = {toxinidir}{:}{env:PATH}
 commands =
-    python -c 'print((80*"~")+"\ntestenv:benchmark-{basepython}\n"+(80*"~"))'
-    python setup.py develop
-    python -m pip list --format=columns
-    python -c "print(r'{envpython}')"
-    pip freeze
-
-# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    python -c 'print((80*"~")+"\nbm36: pip install asv\n"+(80*"~"))'
+    pip install asv
+    #python -c 'print((80*"~")+"\nbm36: pip list\n"+(80*"~"))'
+    #python -m pip list --format=columns
+    #python -c 'print((80*"~")+"\nbm36: pip freeze\n"+(80*"~"))'
+    #pip freeze
+    #python -c 'print((80*"~")+"\nbm36: asv run --show-stderr --python=2.7 (for arctic)\n"+(80*"~"))'
+    #asv run --show-stderr --python=2.7
+    #python -c 'print((80*"~")+"\nbm36: asv run --show-stderr --python=3.6 (for arctic)\n"+(80*"~"))'
+    #asv run --show-stderr --python=3.6
+    #python -c 'print((80*"~")+"\nbm36: asv run --show-stderr --python=3.7 (for arctic)\n"+(80*"~"))'
+    #asv run --show-stderr --python=3.7
+    python -c 'print((80*"~")+"\nbm36: asv run (for arctic)\n"+(80*"~"))'
+    asv run
+    python -c 'print((80*"~")+"\nbm36: complete\n"+(80*"~"))'
