--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,9 @@
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 [tox]
 envlist =
+    # basic configurations: run tests for each python version
     dev{27,36,37}
+    # benchmark configuration for asv
     bm36
 skipsdist = True
 skip_missing_interpreters = True
@@ -61,6 +63,7 @@ deps =
 commands =
     python -c 'print((80*"~")+"\ntestenv: pip install\n"+(80*"~"))'
     pip install --upgrade pip
+    python -m pip install --upgrade pip
     pip install python-dateutil --upgrade
     pip install pytz --upgrade
     pip install tzlocal --upgrade
@@ -79,7 +82,7 @@ commands =
     pip install setuptools-git --upgrade
     python -c 'print((80*"~")+"\ntestenv: setup.py develop (for arctic)\n"+(80*"~"))'
     python setup.py develop
-    python -c 'print((80*"~")+"\nntestenv: complete\n"+(80*"~"))'
+    python -c 'print((80*"~")+"\ntestenv: complete\n"+(80*"~"))'
 
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # (.venv) $ tox -e dev27
@@ -90,15 +93,15 @@ usedevelop = True
 commands =
     python -c 'print((80*"~")+"\ndev27-{basepython}\n"+(80*"~"))'
     python -c 'print((80*"~")+"\ndev27: pip install pandas=0.22.0\n"+(80*"~"))'
-    pip install pandas==0.22.0
+    pip install pandas==0.25.0
+    python -c 'print((80*"~")+"\ndev27: list\n"+(80*"~"))'
+    python -m pip list --format=columns
+    python -c 'print((80*"~")+"\ndev27: pip freeze\n"+(80*"~"))'
+    pip freeze
     python -c 'print((80*"~")+"\ndev27: setup.py test (for arctic)\n"+(80*"~"))'
     python setup.py test --pytest-args=-v
     python -c 'print((80*"~")+"\ndev27: pycodestyle arctic\n"+(80*"~"))'
     pycodestyle arctic
-    #python -c 'print((80*"~")+"\ndev27: pip list\n"+(80*"~"))'
-    #python -m pip list --format=columns
-    #python -c 'print((80*"~")+"\ndev27: pip freeze\n"+(80*"~"))'
-    #pip freeze
     python -c 'print((80*"~")+"\ndev27: complete\n"+(80*"~"))'
 
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -111,14 +114,14 @@ deps = {[testenv]deps}
 usedevelop = True
 commands =
     python -c 'print((80*"~")+"\ndev-{basepython}\n"+(80*"~"))'
+    python -c 'print((80*"~")+"\ndev-{basepython}: list\n"+(80*"~"))'
+    python -m pip list --format=columns
+    python -c 'print((80*"~")+"\ndev-{basepython}: pip freeze\n"+(80*"~"))'
+    pip freeze
     python -c 'print((80*"~")+"\ndev-{basepython}: setup.py test (for arctic)\n"+(80*"~"))'
     python setup.py test --pytest-args=-v
     python -c 'print((80*"~")+"\ndev-{basepython}: pycodestyle arctic\n"+(80*"~"))'
     pycodestyle arctic
-    #python -c 'print((80*"~")+"\ndev-{basepython}: list\n"+(80*"~"))'
-    #python -m pip list --format=columns
-    #python -c 'print((80*"~")+"\ndev-{basepython}: pip freeze\n"+(80*"~"))'
-    #pip freeze
     python -c 'print((80*"~")+"\ndev-{basepython}: complete\n"+(80*"~"))'
 
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -138,16 +141,10 @@ setenv =
 commands =
     python -c 'print((80*"~")+"\nbm36: pip install asv\n"+(80*"~"))'
     pip install asv
-    #python -c 'print((80*"~")+"\nbm36: pip list\n"+(80*"~"))'
-    #python -m pip list --format=columns
-    #python -c 'print((80*"~")+"\nbm36: pip freeze\n"+(80*"~"))'
-    #pip freeze
-    #python -c 'print((80*"~")+"\nbm36: asv run --show-stderr --python=2.7 (for arctic)\n"+(80*"~"))'
-    #asv run --show-stderr --python=2.7
-    #python -c 'print((80*"~")+"\nbm36: asv run --show-stderr --python=3.6 (for arctic)\n"+(80*"~"))'
-    #asv run --show-stderr --python=3.6
-    #python -c 'print((80*"~")+"\nbm36: asv run --show-stderr --python=3.7 (for arctic)\n"+(80*"~"))'
-    #asv run --show-stderr --python=3.7
+    python -c 'print((80*"~")+"\nbm36: pip list\n"+(80*"~"))'
+    python -m pip list --format=columns
+    python -c 'print((80*"~")+"\nbm36: pip freeze\n"+(80*"~"))'
+    pip freeze
     python -c 'print((80*"~")+"\nbm36: asv run (for arctic)\n"+(80*"~"))'
     asv run
     python -c 'print((80*"~")+"\nbm36: complete\n"+(80*"~"))'
