--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,7 +91,8 @@ defaults: &defaults
          #pip install -r ./notebooker/notebook_templates_example/notebook_requirements.txt
          mkdir test-results
          #arctic tests added
-         python setup.py test --pytest-args=-v --junitxml=test-results/junit.xml
+         python setup.py test --pytest-args=-v
+         cp junit.xml test-results
          #py.test -svvvvv --junitxml=test-results/junit.xml
          #bash <(curl -s https://codecov.io/bash) -c -F python
     - store_test_results:
