do not release master branch build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -135,25 +135,25 @@ jobs:
     docker:
     - image: cimg/python:3.7-node
     <<: *defaults
-  publish-github-release:
-    docker:
-      - image: cibuilds/github:0.13
-    steps:
-      - attach_workspace:
-          at: /tmp/circleci-artifacts
-      - run:
-          name: "Publish release on GitHub"
-          command: |
-            VERSION=$(cat /tmp/circleci-artifacts/3_6/version.txt)
-            CHANGES=$(cat /tmp/circleci-artifacts/3_6/changes.md)
-            ghr -t ${GITHUB_TOKEN} \
-                -u ${CIRCLE_PROJECT_USERNAME} \
-                -r ${CIRCLE_PROJECT_REPONAME} \
-                -c ${CIRCLE_SHA1} \
-                -n ${VERSION} \
-                -b "${CHANGES}" \
-                -soft \
-                ${VERSION} /tmp/circleci-artifacts/3_6/dist
+  #publish-github-release:
+  # docker:
+  #   - image: cibuilds/github:0.13
+  # steps:
+  #   - attach_workspace:
+  #       at: /tmp/circleci-artifacts
+  #   - run:
+  #       name: "Publish release on GitHub"
+  #       command: |
+  #         VERSION=$(cat /tmp/circleci-artifacts/3_6/version.txt)
+  #         CHANGES=$(cat /tmp/circleci-artifacts/3_6/changes.md)
+  #         ghr -t ${GITHUB_TOKEN} \
+  #             -u ${CIRCLE_PROJECT_USERNAME} \
+  #             -r ${CIRCLE_PROJECT_REPONAME} \
+  #             -c ${CIRCLE_SHA1} \
+  #             -n ${VERSION} \
+  #             -b "${CHANGES}" \
+  #             -soft \
+  #             ${VERSION} /tmp/circleci-artifacts/3_6/dist
 workflows:
   version: 2
   build_all:
